package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "picotool",
    srcs = [
        "cli.h",
        "clipp/clipp.h",
        "elf.h",
        "main.cpp",
        "picoboot_connection/picoboot_connection.c",
        "picoboot_connection/picoboot_connection.h",
        "picoboot_connection/picoboot_connection_cxx.cpp",
        "picoboot_connection/picoboot_connection_cxx.h",
    ],
    copts = select({
        "@platforms//os:windows": [],
        "//conditions:default": [
            "-fexceptions",
            "-Wno-delete-non-abstract-non-virtual-dtor",
            "-Wno-reorder-ctor",
            "-Wno-unused-variable",
        ],
    }),
    # TODO: There's probably a nicer way to do share this with CMake.
    defines = [
        'PICOTOOL_VERSION=\\"1.1.2\\"',
        'SYSTEM_VERSION=\\"host\\"',
        'COMPILER_INFO=\\"local\\"',
    ],
    includes = ["picoboot_connection"],
    deps = [
        "@pico-sdk//src/common/boot_picoboot:boot_picoboot",
        "@pico-sdk//src/common/boot_uf2:boot_uf2",
        "@pico-sdk//src/common/pico_base:platform_defs",
        "@pico-sdk//src/common/pico_binary_info:pico_binary_info",
        "@pico-sdk//src/rp2_common/pico_stdio_usb:reset_interface_headers",
        "@libusb//:libusb",
    ],
)
