module(name = "picotool", version="0.0.1")

# libusb isn't yet in the BCR, this is fetched from:
#     https://github.com/armandomontanez/bazel-registry
bazel_dep(name = "libusb", version="0.0.1")

# pico-sdk isn't yet in the BCR, this is fetched from:
#     https://github.com/armandomontanez/bazel-registry
bazel_dep(name = "pico-sdk", version="0.0.1")

# pw_toolchain isn't yet in a Bazel module registry, and comes in transitively
# from the pico-sdk.
archive_override(
    module_name = "pw_toolchain",
    strip_prefix = "pigweed-a2b21f20127369137c0a24ba1aa91dba86ce9197/pw_toolchain_bazel",
    urls = "https://github.com/google/pigweed/archive/a2b21f20127369137c0a24ba1aa91dba86ce9197.zip",
)
