module(name = "picotool", version="1.1.3-rc1")

bazel_dep(name = "rules_libusb", version="0.1.0-rc1")
bazel_dep(name = "pico-sdk", version="1.6.0-rc1")
bazel_dep(name = "platforms", version="0.0.7")

libusb = use_extension("@rules_libusb//:extensions.bzl", "libusb")
libusb.source_release(min_version = "1.0.22")
use_repo(libusb, "libusb")
