module(
    name = "picotool",
    version = "2.0.0",
)

bazel_dep(name = "rules_libusb", version = "0.1.0-rc1")
bazel_dep(name = "pico-sdk", version = "2.0.0")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "bazel_skylib", version = "1.6.1")
bazel_dep(name = "rules_python", version = "0.22.1")
bazel_dep(name = "platforms", version = "0.0.9")

libusb = use_extension("@rules_libusb//:extensions.bzl", "libusb")
libusb.source_release(min_version = "1.0.22")
use_repo(libusb, "libusb")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# TODO: Upstream a bazel build
http_archive(
    name = "mbedtls",
    build_file = "//bazel:mbedtls.BUILD",
    sha256 = "241c68402cef653e586be3ce28d57da24598eb0df13fcdea9d99bfce58717132",
    strip_prefix = "mbedtls-2.28.8",
    url = "https://github.com/Mbed-TLS/mbedtls/releases/download/v2.28.8/mbedtls-2.28.8.tar.bz2",
)
