load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "elf",
    srcs = ["elf_file.cpp"],
    hdrs = [
        "elf.h",
        "elf_file.h",
        "portable_endian.h",
    ],
    copts = select({
        "@platforms//os:windows": [],
        "//conditions:default": [
            "-Wno-unused-function",
        ],
    }),
    includes = ["."],
    deps = [
        "//errors",
        "//model",
    ],
)
